@@ -4,8 +4,15 @@ apport (0.74) UNRELEASED; urgency=low
     until we get a proper guided bug reporting.
   * problem_report.py, write_mime(): Do not re-compress keys which already end
     in .gz. Add test cases.
+  * test-hooks: Add a (dodgy) test case for calling package_hook on an
+    uninstalled package. After all, this is very likely to happen for
+    installation errors. This reproduces #97636.
+  * backends/packaging-dpkg.py, get_source(): Add a similarly dodgy fallback
+    to apt if the queried package is not installed. This needs to be
+    generalized and cleaned up later, but now is the time for unintrusive
+    small patches. (LP: #97636)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 30 Mar 2007 14:02:46 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon,  2 Apr 2007 13:22:41 +0200
 
 apport (0.73) feisty; urgency=low
 
